--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/梅兰商贸首页03.css">
 </head>
 <body>
-	【小声喝茶优选小程序】会员福利来喽~ 正宗福鼎老白茶，优惠无套路，限时每人一份，<a href="weixin:\/\/dl\/business\/?t=5UbQ2nxWchb">点击这里</a> 跳转到相关页面。 回T退订
+	【小声喝茶优选小程序】会员福利来喽~ 正宗福鼎老白茶，优惠无套路，限时每人一份，<a href="weixin://dl/business/?t=buDDmXdjZYj">点击这里</a> 跳转到相关页面。 回T退订
 
 </body>
 </html>
