--- a/getRequestCode.html
+++ b/getRequestCode.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>requestCode Generator</title>
+<script src="https://isz-open.sz.gov.cn/lib/jpasc-0.4.0.js"></script>
 <script>
 // Simplified JavaScript function to simulate requestCode generation based on initcode.
 function generateRequestCode() {
