--- a/getRequestCode.html
+++ b/getRequestCode.html
@@ -6,10 +6,10 @@
 <title>requestCode Generator</title>
 <script src="https://isz-open.sz.gov.cn/lib/jpasc-0.4.0.js"></script>
 <script>
-// Simplified JavaScript function to simulate requestCode generation based on initcode.
+// Simplified JavaScript function to simulate requestCode generation based on initCode.
 function generateRequestCode() {
-    var initcode = document.getElementById('initcode').value;
-    console.log("Input initcode:", initcode);
+    var initCode = document.getElementById('initCode').value;
+    console.log("Input initCode:", initCode);
     var requestCode;
 	  sc.config({
 						debug: true, // 是否开启调试模式,调用的所有 api 的返回值会在客户端 alert 出来
@@ -37,8 +37,8 @@ function generateRequestCode() {
 <body>
 <h1>requestCode Generator</h1>
 <div>
-    <label for="initcode">Enter initcode:</label>
-    <input type="text" id="initcode" name="initcode">
+    <label for="initCode">Enter initCode:</label>
+    <input type="text" id="initCode" name="initCode">
 </div>
 <div>
     <button onclick="generateRequestCode()">Generate requestCode</button>
